--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,5 @@
-<ul *ngFor="let user of users">
-  <li>{{user.id}}-{{user.userName}}</li>
+<app-nav></app-nav>
+<div class="container" style="margin-top: 100px;">
+<app-home></app-home>
 
-</ul>
+</div>
