--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -23,7 +23,7 @@
         <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.userName |uppercase}} </a>
           <div class="dropdown-menu mt-3" *dropdownMenu>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item">  Edit Profile </a>
+            <a class="dropdown-item" routerLink="/member/edit">  Edit Profile </a>
             <a class="dropdown-item" (click)="logout()"> Logout </a>
           </div>
 
