--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -20,6 +20,7 @@
 
 
       <div class="dropdown" *ngIf="(accountService.currentUser$|async) as user" dropdown>
+        <img src="{{user.photoUrl}}" alt="{{user.username}}">
         <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.userName |uppercase}} </a>
           <div class="dropdown-menu mt-3" *dropdownMenu>
             <div class="dropdown-divider"></div>
